  
syntax = "proto3";

package pb.fib.v1;

message FibRequest {
  uint64 fibNum = 1;
}

message FibResponse {
  uint64 result = 1;
}

service FibService {
  rpc Compute (FibRequest) returns (FibResponse) {}
}